Improved readability of variable names

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -67,7 +67,7 @@
                                 <label for="noteInput">Add a Note:</label>
                                 <textarea class="form-control" id="{{_id}}-input" rows="3"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary add-note" data-_id="{{_id}}">Submit</button>
+                            <button type="submit" class="btn btn-primary add-note" data-article-id="{{_id}}">Submit</button>
                         </form>
                     </div>
                 </div>
