--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,23 @@
-<h1>TechCrunch News Scraper</h1>
-<h2>For the latest and greatest in startup and technology news</h2>
-
-<button><a href="/">Home</a></button>
-<button><a href="/articles/saved">Saved Articles</a></button>
-<button id="scrape">Scrape!</button>
-
-<h3>
+<h1 class="font-weight-bold text-success">TechCrunch News Scraper</h1>
+<h2 class="text-light">For the latest and greatest in startup and technology news</h2>
+<br>
+{{#if home}}
+    <a href="/" class="btn btn-light disabled">Home</a>
+    <a href="/articles/saved" class="btn btn-light">Saved Articles</a>
+{{else}}
+    <a href="/" class="btn btn-light">Home</a>
+    <a href="/articles/saved" class="btn btn-light disabled">Saved Articles</a>
+{{/if}}
+<button class="btn btn-success" id="scrape">Scrape!</button>
+<br><br>
+<h3 class="text-center text-light">
     {{#if home}}
         Home
     {{else}}
-        Saved
+        Saved Articles
     {{/if}}
 </h3>
-
+<hr class="border-info">
 {{#if articles.length}}
     <div id="accordion">
         {{#each articles}}
@@ -32,7 +37,7 @@
                             <button type="button" class="btn btn-success save" data-article-id="{{_id}}" data-save="true">Save Article</button>
                         {{/if}}
                     {{else}}
-                        <button type="button" class="btn border-success unsave" data-article-id="{{_id}}" data-save="false">Remove From Saved</button>
+                        <button type="button" class="btn btn-outline-success unsave" data-article-id="{{_id}}" data-save="false">Remove From Saved</button>
                     {{/if}}
                     <button class="btn btn-info" data-toggle="collapse" data-target="#{{id}}" aria-expanded="false" aria-controls="{{_id}}">
                         View Notes
@@ -72,6 +77,7 @@
                     </div>
                 </div>
             </div>
+            <br>
         {{/each}}
     </div>
 {{else}}
